<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitPet</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="button_placeholder_text">Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="dashed_area_text">Cool information you might would like to know, that is why it is in this dashed area!</string>
    <string name="show">Show</string>
    <string name="show_dialog_text">Show a Custom Dialog and Loader</string>
    <string name="text_input_hint">text input</string>
    <string name="four">Four</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="detail_title_placeholder">Cool Title Of Some Movie</string>
    <string name="contact_placeholder">Super useful contact info here I guess.\n\nProfile image is from FreePik.com</string>
    <string name="social_1_placeholder">4.8</string>
    <string name="social_1_placeholder_nr">15</string>
    <string name="sumary_placeholder">Summary</string>
    <string name="description_placeholder">Description</string>
    <string name="description_tab_1">Wall</string>
    <string name="description_tab_2">Contact</string>
    <string name="image_description">Image Description</string>
    <string name="description_title_placeholder">Cool Title Of Some Movie</string>
    <string name="social_2_placeholder">Hotels &amp; Clubs</string>
    <string name="social_3_placeholder">From 2 PM</string>
    <string name="app_title">Fit Pet</string>
    <string name="explore">Explore</string>
    <string name="buy">"  Buy  "</string>
    <string name="hidden_view_text">Click Me</string>
    <string name="list_title_placeholder">Amazing Title</string>
    <string name="list_description_placeholder">Cool Content Description of Item</string>
    <string name="list_number_text_placeholder">Characters</string>
    <string name="list_number_placeholder">27</string>
    <string name="dialog_text_placeholder">With Custom loader (loader is also usable separately)</string>
    <string name="dialog_title_placeholder">Styled Dialog</string>
    <string name="dialog_button_text">" Cancel "</string>
    <string name="placeholder_views">16 Thousand</string>
    <string name="views">Views</string>
    <string name="followers_placeholder">503</string>
    <string name="followers">Followers</string>
    <string name="title_activity_add_pet">AddPet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="title_activity_pet_events">PetEvents</string>



        <string name="menu_settings">Settings</string>
        <string name="title_activity_main">MainActivity</string>


        <string name="pref_send_report">Send crash reports</string>
        <string name="pref_send_report_summary">Helps to fix bugs</string>
        <string name="pref_breed_list">Choose a breed</string>
        <string name="pref_sync_frequency_summary">Set the sync frequency</string>
        <string name="pref_pet_name">Pet name</string>
        <string name="pref_pet_name_summary">Set your pet\'s name</string>

        <string name="pref_pet_profile">Pet Profile</string>
        <string name="pref_pet_breed">Breed</string>

    <string-array name="list_breeds">
        <item>Miniature Schnauzer</item>
        <item>Golden Retriever</item>
        <item>Yorkshire Terrier</item>
        <item>German Shepherd</item>
    </string-array>

    <string name="breeds_prompt">Choose a breed</string>
    <string name="cur_date">Current Date (M-D-YYYY): </string>
    <string name="ch_label">Change Date</string>
    <string name="title_activity_pet_home">PetHome</string>
    <string name="title_activity_date_picker">DatePicker</string>

</resources>
