<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res/com.special">

    <TextView
        android:id="@+id/hidden_view"
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:background="@color/red"
        android:enabled="false"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/hidden_view_text"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/front_layout"
        android:layout_width="match_parent"
        android:background="@color/white_transparent"
        android:layout_height="wrap_content" >
        
         <com.special.utils.UICircularImage
    		xmlns:app="http://schemas.android.com/apk/res-auto"
    		android:id="@+id/item_image"
    		android:layout_margin="5dp"
    		android:layout_width="75dp"
    		android:layout_height="75dp"
    		android:padding="10dp"
    		app:line_width="1dp"
    		app:padding="0dp"
    		app:line_color_press="@color/green"
    		app:line_color="@color/theme_color"/>
    		
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >
            
               <TextView
            	  android:id="@+id/item_title"
            	  android:layout_width="wrap_content"
            	  android:layout_height="match_parent"
            	  android:layout_centerInParent="true"
            	  android:text="@string/list_title_placeholder"
            	  android:textAppearance="?android:textAppearanceMedium" />

              <TextView
                  android:id="@+id/item_description"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="sans-serif-light"
                  android:layout_gravity="center_vertical"
                  android:paddingRight="5dp"
                  android:text="@string/list_description_placeholder" />
        	  
           </LinearLayout>
    </LinearLayout>

</FrameLayout>